feat(native): deploy into intermediate DEPLOYMENT_DEST
Add DEPLOYMENT_DEST configuration variable that specifies the location
where the deployment will be generated. This defaults to VERAISON_ROOT
(the install location of the deployment), but may be set to a different
value, allowing the deployment to be created in an intermediate location
before being moved into its final installation destination.

This is useful when the native deployment is intended to be used as an
input for an alternative deployment mechanism (e.g. a Debian package)
rather than being used directly.

Signed-off-by: Sergei Trofimov <sergei.trofimov@arm.com>

--- a/deployments/native/deployment.cfg
+++ b/deployments/native/deployment.cfg
@@ -31,4 +31,14 @@ VERAISON_USER=${VERAISON_USER:-veraison}
 # vts-service), and a rootCA.crt that was used to sign the service certs.
 VERAISON_CERTS=${VERAISON_CERTS:-}
 
+# Destination into which the deployment will be generated. This would generally
+# be the same as VERAISON_ROOT, and will default to that if not specified.
+# However, it is possible to specify a different path, if it is not intended to
+# be the final destination for the deployment. For example, when creating a
+# distribution package (e.g. .deb  for Ubuntu), VERAISON_ROOT should be set to
+# the final installed location (e.g. /opt/verasion), and DEPLOYMENT_DEST should
+# be set to the location from which the final package tarball will be generated
+# (e.g. ~/work/veraison-deb/src).
+DEPLOYMENT_DEST=${DEPLOYMENT_DEST:-${VERAISON_ROOT}}
+
 # vim: set ft=bash:
